[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/Tall Film.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Resources/tiles.tres" type="TileSet" id=2]
[ext_resource path="res://Scripts/TitleScene.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 128
extra_spacing_char = 36
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 50
extra_spacing_char = 16
font_data = ExtResource( 1 )

[node name="TitleScene" type="Node2D"]
script = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 1120, -64 )

[node name="Label" type="Label" parent="."]
margin_left = 160.0
margin_top = 128.0
margin_right = 1120.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BREAKFAST FOR"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 160.0
margin_top = 320.0
margin_right = 1120.0
margin_bottom = 449.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "AN ASTROBOTANIST"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DropTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Play" type="Button" parent="."]
margin_left = 448.0
margin_top = 544.0
margin_right = 576.0
margin_bottom = 608.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.0823529, 0.854902, 0.0941176, 1 )
custom_colors/font_color_pressed = Color( 0.160784, 0.560784, 0, 1 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
margin_left = 704.0
margin_top = 544.0
margin_right = 832.0
margin_bottom = 608.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.854902, 0.0823529, 0.0823529, 1 )
custom_colors/font_color_pressed = Color( 0.560784, 0, 0, 1 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="DropTimer" to="." method="_on_DropTimer_timeout"]
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
